<resources>
  <string name="Parse_error_dlg_text">There was a problem parsing the package.</string>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="about_pure_mode">About Mi Protect</string>
  <string name="about_safe_mode">Learn more about Mi Protect</string>
  <string name="accessibility_sliding_button_state_description_off">Turned off</string>
  <string name="accessibility_sliding_button_state_description_on">Turned on</string>
  <string name="accessibility_tab_state_description_unselect">Not selected</string>
  <string name="accessibility_tab_statedesc_unselect">Not selected</string>
  <string name="actionbar_button_up_description">Back</string>
  <string name="ad_permissions">&lt;u&gt;Permissions&lt;u/&gt;</string>
  <string name="ad_privacy">&lt;u&gt;Privacy&lt;u/&gt;</string>
  <string name="ads">Ads</string>
  <string name="ads_install_button">Install</string>
  <string name="ads_install_button_installed">Open</string>
  <string name="ads_install_button_isInstalling">Installing</string>
  <string name="ads_install_button_waiting">Waiting</string>
  <string name="advanced_mode_intro">Only apps installed from GetApps after identity verification are supported</string>
  <string name="after_install_to_delete">Delete installation packages after installation</string>
  <string name="afternoon">Afternoon</string>
  <string name="aleady_this_install">Allowed one-time installation</string>
  <string name="allow_current_install">Allow once</string>
  <string name="allowed_this_time">Allow once</string>
  <string name="already_know_high_risk">I understand the risks this app might pose</string>
  <string name="already_know_not_scanned">I understand that this app wasn't tested by Xiaomi and might pose security risks</string>
  <string name="am">AM</string>
  <string name="androidx_startup">androidx.startup</string>
  <string name="anonymous_source_continue">Continue</string>
  <string name="anonymous_source_warning">Your phone and personal data are more vulnerable to attack by unknown apps. By installing this app, you agree that you are responsible for any damage to your phone or loss of data that may result from its use.</string>
  <string name="app_already_on_the_app_store">Download from GetApps</string>
  <string name="app_crash_test_text">Package installer force closed</string>
  <string name="app_data_safe_inside">应用数据保险箱内测</string>
  <string name="app_description_picture">App description</string>
  <string name="app_detail_change_log">What's new</string>
  <string name="app_detail_introduction">About this app</string>
  <string name="app_detail_other_info">Other info</string>
  <string name="app_detail_other_publish">Developer: %1$s</string>
  <string name="app_detail_other_update_time">Updated: %1$s</string>
  <string name="app_detail_other_version">Version: %1$s</string>
  <string name="app_get_source">App source</string>
  <string name="app_info_permissions">Permissions</string>
  <string name="app_info_permissions_format">%1$s %2$s</string>
  <string name="app_info_size">Size: %1$s</string>
  <string name="app_info_version">Version: %1$s</string>
  <string name="app_info_version_replace">Version: %1$s -&gt; %2$s</string>
  <string name="app_info_version_replace_talkback">Update from version %1$s to version %2$s</string>
  <string name="app_installed_notification_channel_description">App installed notification</string>
  <string name="app_installing_not_allow">You blocked installation of %1$s. </string>
  <string name="app_installing_not_allow_1">Blocked %1$s from installing an app. </string>
  <string name="app_installing_not_allow_2">Installation was blocked. Search "Install unknown apps" in Settings to change your preferences.</string>
  <string name="app_installing_not_allow_2_with_name">Prevented %1$s from installing another app. Search "Install unknown apps" in Settings to change your preferences.</string>
  <string name="app_name">Package installer</string>
  <string name="app_name_unknown">Unknown</string>
  <string name="app_not_found_dlg_text">The app wasn't found in the list of installed apps.</string>
  <string name="app_not_found_dlg_title">App not found</string>
  <string name="app_store_has_safe_version">Download secure version from GetApps</string>
  <string name="app_uninstall_ensure">Uninstall</string>
  <string name="app_version_format">Version: %1$s</string>
  <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
  <string name="archive">Archive</string>
  <string name="archive_application_text">Your personal data will be saved</string>
  <string name="archive_application_text_all_users">Archive this app for all users? Your personal data will be saved</string>
  <string name="archive_application_text_current_user_private_profile">Do you want to archive this app from your private space? Your personal data will be saved</string>
  <string name="archive_application_text_current_user_work_profile">Archive this app on your work profile? Your personal data will be saved</string>
  <string name="archive_application_text_user">Archive this app for %1$s? Your personal data will be saved</string>
  <string name="archive_fail_hint_dialog_content_0">This app doesn't support archiving.</string>
  <string name="archive_fail_hint_dialog_title">Couldn't archive</string>
  <string name="archive_hint_dialog_content">If you archive %1$s, the app will be uninstalled, but your data will be retained. Archive now?</string>
  <string name="archive_hint_dialog_title">Archive %1$s?</string>
  <string name="archiving_app_label">Archive %1$s?</string>
  <string name="auth_reach_limit_switch_method">Too many unsuccessful attempts. Try another verification method.</string>
  <string name="auth_type_face">Face</string>
  <string name="auth_type_finger">Fingerprint</string>
  <string name="auth_type_screen_lock">Screen lock</string>
  <string name="auth_type_security_verify">Identity verification</string>
  <string name="authorize_this_once_install">allow this time</string>
  <string name="authorize_to_install">allow</string>
  <string name="background_install_task_create">Installing "%1$s"</string>
  <string name="background_install_task_create_failed">Couldn't install</string>
  <string name="background_install_task_create_failed_already_new">Couldn't install. You're using the latest version.</string>
  <string name="blocked_by_advanced_mode_dialog_content">Advanced mode is on. Only apps that pass security tests from GetApps can be installed.</string>
  <string name="blocked_by_advanced_mode_dialog_positive">Search in GetApps</string>
  <string name="blocked_by_advanced_mode_dialog_tip">Advanced mode is on</string>
  <string name="blocked_by_advanced_mode_dialog_title">Security alert</string>
  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
  <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
  <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
  <string name="button_text_back">Back</string>
  <string name="cancel_install">Cancel</string>
  <string name="character_counter_pattern">%1$d/%2$d</string>
  <string name="dev_com_appname_input">Enter here</string>
  <string name="dev_com_appname_text">App name</string>
  <string name="dev_com_contact_input">Enter contact name</string>
  <string name="dev_com_contact_text">Contact</string>
  <string name="dev_com_content_input">Tell us why you're submitting an appeal</string>
  <string name="dev_com_content_text">Reason for appeal</string>
  <string name="dev_com_devname_input">Enter full name</string>
  <string name="dev_com_devname_text">Developer name</string>
  <string name="dev_com_mail_input">Enter email address</string>
  <string name="dev_com_mail_text">Email</string>
  <string name="dev_com_phone_input">Enter phone number</string>
  <string name="dev_com_phone_text">Phone number</string>
  <string name="dev_com_pkgname_text">Package name</string>
  <string name="dev_com_risk_text">Risk category</string>
  <string name="dev_complaint_btntext">Submit</string>
  <string name="dev_complaint_result_tip1">Submitted appeal successfully</string>
  <string name="dev_complaint_result_tip2">We'll contact you within 5 business days. Please don't submit duplicate appeals.</string>
  <string name="dev_complaint_tiptext">We'll contact you within 5 business days of you submitting your appeal</string>
  <string name="do_not_show_again">Don't show again</string>
  <string name="enhance_mode_intro">Only supports installation of apps that have passed review by GetApps</string>
  <string name="enhance_safe_mode">Enhanced protection</string>
  <string name="external_sources_settings_negative">Restrict</string>
  <string name="face_verify_authority">Verify with Face unlock</string>
  <string name="general_mode_subtitle">Protects against risky apps and privacy violations</string>
  <string name="lock_finger">Verify fingerprint to install</string>
  <string name="lock_screen_risk">Screen lock</string>
  <string name="mi_protected">Mi Protect</string>
  <string name="mi_protected_duty">Your security is our priority</string>
  <string name="no_set_lock_screen_tip">If you haven't yet set up a Lock screen password, fingerprint, or Face unlock, you can do so in Settings.</string>
  <string name="pref_ads">Recommendations</string>
  <string name="pref_key_about_privacy_title">Privacy Policy</string>
  <string name="pref_key_developer_services">Developer services</string>
  <string name="pure_mode_des">Mi Protect makes sure that every app installed on your device has passed Xiaomi security tests.</string>
  <string name="report_text">Report</string>
  <string name="safe_guard_title_text">Turn on Mi Protect for your security and peace of mind.</string>
  <string name="safe_mode">Mi Protect</string>
  <string name="safe_mode_advanced_suffix">Advanced mode</string>
  <string name="secure_mode_app_install_verify">Authorize unverified apps</string>
  <string name="secure_mode_authority_verification_type">Verification method</string>
  <string name="secure_mode_open_app_verify_des">Authorize installation for apps that haven't been verified by GetApps</string>
  <string name="secure_mode_security_verify">Security authorization</string>
  <string name="security_mode_renamed">Secure mode is now</string>
  <string name="security_mode_renamed_ok">Got it</string>
  <string name="settings">Settings</string>
  <string name="single_authorize_for_installation">单次安装授权</string>
  <string name="thirty_days_no_asking">Don't remind again for %1$d days</string>
  <string name="xiaomi_account_risk">Xiaomi Account password</string>
</resources>