<?xml version='1.0' encoding='utf-8' ?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <com.miui.packageInstaller.fullsafe.ui.FullSafeDescribePreference android:key="secure_settings_tip" />
  <miuix.preference.PreferenceCategory android:key="secure_settings_mode_module">
    <miuix.preference.RadioButtonPreferenceCategory android:key="secure_settings_mode_switch">
      <miuix.preference.RadioButtonPreference android:title="@string/safe_mode"
                            android:key="secure_settings_normal_mode"
                            android:summary="@string/general_mode_subtitle" />
      <miuix.preference.RadioButtonPreference android:title="@string/enhance_safe_mode"
                            android:key="secure_settings_enhance_mode"
                            android:summary="@string/enhance_mode_intro" />
      <miuix.preference.RadioButtonPreference android:title="@string/safe_mode_advanced_suffix"
                            android:key="secure_settings_advanced_mode"
                            android:summary="@string/advanced_mode_intro" />
    </miuix.preference.RadioButtonPreferenceCategory>
  </miuix.preference.PreferenceCategory>
</PreferenceScreen>