<?xml version='1.0' encoding='utf-8' ?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <miuix.preference.PreferenceCategory android:title="">
    <miuix.preference.CheckBoxPreference android:title="@string/pref_ads"
                          android:key="pref_key_open_ads" />
    <miuix.preference.CheckBoxPreference android:title="@string/after_install_to_delete"
                          android:key="pref_key_delete_package" />
    <miuix.preference.TextPreference android:title="@string/secure_mode_security_verify"
                          android:key="pref_key_security_mode_security_verify_risk_app" />
    <miuix.preference.TextPreference android:title="@string/safe_mode"
                          android:key="pref_key_safe_install_mode" />
  </miuix.preference.PreferenceCategory>
  <miuix.preference.PreferenceCategory android:title="">
    <miuix.preference.TextPreference android:title="@string/pref_key_about_privacy_title"
                          android:key="pref_key_about_privacy" />
    <miuix.preference.TextPreference android:title="@string/pref_key_developer_services"
                          android:key="pref_key_developer_services" />
  </miuix.preference.PreferenceCategory>
</PreferenceScreen>