<?xml version='1.0' encoding='utf-8' ?>
<miuix.core.widget.NestedScrollView android:id="@id/dev_com_scrollview"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:layout_marginHorizontal="12.0dp" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <LinearLayout android:orientation="vertical"
                android:id="@id/ll_root"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
    <com.miui.support.cardview.CardView android:id="@id/dev_com_editgroup1"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginVertical="8.0dp"
                          app:cardCornerRadius="16.0dp"
                          app:cardElevation="0.0px">
      <LinearLayout android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
        <miuix.androidbasewidget.widget.StateEditText android:id="@id/dev_com_edit_appname"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:hint="@string/dev_com_appname_input"
                              app:miuixAppcompatLabel="@string/dev_com_appname_text" />
        <miuix.androidbasewidget.widget.StateEditText android:id="@id/dev_com_edit_pkgname"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:hint="@string/dev_com_appname_input"
                              app:miuixAppcompatLabel="@string/dev_com_pkgname_text" />
      </LinearLayout>
    </com.miui.support.cardview.CardView>
    <RelativeLayout android:layout_gravity="center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="-5.0dp"
                    android:layout_marginVertical="8.0dp">
      <TextView android:textSize="17.0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_com_risk_text"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="16.0dp"
                android:layout_alignParentStart="true" />
      <miuix.appcompat.widget.Spinner android:entries="@array/pure_introduction_label"
                            android:id="@id/dev_com_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            app:spinnerModeCompat="dropdown" />
    </RelativeLayout>
    <com.miui.support.cardview.CardView android:id="@id/dev_com_content_view"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginVertical="8.0dp"
                          app:cardCornerRadius="16.0dp"
                          app:cardElevation="0.0px">
      <LinearLayout android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
        <TextView android:textSize="17.0sp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="15.5dp"
                  android:text="@string/dev_com_content_text"
                  android:fontFamily="sans-serif-medium"
                  android:layout_marginStart="16.0dp" />
        <miuix.androidbasewidget.widget.StateEditText android:gravity="top"
                              android:id="@id/dev_com_edit_content"
                              android:background="@null"
                              android:paddingTop="5.0dp"
                              android:layout_width="fill_parent"
                              android:layout_height="116.0dp"
                              android:hint="@string/dev_com_content_input"
                              android:singleLine="false"
                              android:maxLength="200" />
        <TextView android:textSize="14.0sp"
                  android:textColor="@color/black_60"
                  android:layout_gravity="end"
                  android:id="@id/dev_com_tv_content_length"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="20.0dp"
                  android:text="@string/character_counter_pattern"
                  android:fontFamily="sans-serif-medium"
                  android:layout_marginEnd="16.0dp" />
      </LinearLayout>
    </com.miui.support.cardview.CardView>
    <com.miui.support.cardview.CardView android:id="@id/dev_com_editgroup2"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginVertical="8.0dp"
                          app:cardCornerRadius="16.0dp"
                          app:cardElevation="0.0px">
      <LinearLayout android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
        <miuix.androidbasewidget.widget.StateEditText android:id="@id/dev_com_edit_devname"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:hint="@string/dev_com_devname_input"
                              app:miuixAppcompatLabel="@string/dev_com_devname_text" />
        <miuix.androidbasewidget.widget.StateEditText android:id="@id/dev_com_edit_contact"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:hint="@string/dev_com_contact_input"
                              app:miuixAppcompatLabel="@string/dev_com_contact_text" />
        <miuix.androidbasewidget.widget.StateEditText android:id="@id/dev_com_edit_mail"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:hint="@string/dev_com_mail_input"
                              app:miuixAppcompatLabel="@string/dev_com_mail_text" />
        <miuix.androidbasewidget.widget.StateEditText android:id="@id/dev_com_edit_phone"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:hint="@string/dev_com_phone_input"
                              app:miuixAppcompatLabel="@string/dev_com_phone_text" />
      </LinearLayout>
    </com.miui.support.cardview.CardView>
    <TextView android:textSize="13.0sp"
              android:textColor="@color/black_30"
              android:gravity="center_horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20.0dp"
              android:text="@string/dev_complaint_tiptext" />
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
      <Button android:id="@id/dev_com_button"
              android:layout_width="0.0dp"
              android:layout_height="wrap_content"
              android:text="@string/dev_complaint_btntext"
              android:layout_marginVertical="12.0dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintWidth_max="336.0dp"
              style="@style/Widget.Button.Primary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </LinearLayout>
</miuix.core.widget.NestedScrollView>