<?xml version='1.0' encoding='utf-8' ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:id="@id/miuix_action_end_menu_group">
    <item android:icon="@drawable/feedback_icon_new"
          android:id="@id/feedback"
          android:title=""
          android:contentDescription="@string/report_text"
          android:showAsAction="always" />
    <item android:icon="@drawable/setting_icon"
          android:id="@id/setting"
          android:title=""
          android:contentDescription="@string/settings"
          android:showAsAction="always" />
    <item android:id="@id/single_auth"
          android:visible="false"
          android:title="@string/single_authorize_for_installation"
          android:contentDescription="@string/single_authorize_for_installation"
          android:showAsAction="never" />
  </group>
</menu>