<?xml version='1.0' encoding='utf-8' ?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical"
                      android:id="@id/root"
                      android:background="@drawable/mi_protected_rename_dialog_bg"
                      android:padding="@dimen/dp_22"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <androidx.appcompat.widget.AppCompatImageView android:layout_width="@dimen/dp_39.3"
                        android:layout_height="@dimen/dp_22"
                        android:src="@drawable/icon_new" />
  <TextView android:textSize="@dimen/dp_20"
            android:textColor="@color/color_0b9966"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_13"
            android:text="@string/security_mode_renamed"
            android:fontFamily="mipro-semibold" />
  <TextView android:textSize="@dimen/dp_40"
            android:textColor="@color/color_0b9966"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2.55"
            android:text="@string/mi_protected"
            android:fontFamily="mipro-heavy" />
  <TextView android:textSize="@dimen/dp_13"
            android:textColor="@color/color_0b9966"
            android:layout_width="wrap_content"
            android:layout_height="0.0dp"
            android:layout_marginTop="@dimen/dp_2.55"
            android:text="@string/mi_protected_duty"
            android:layout_weight="1.0" />
  <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/sp_17"
                        android:textColor="@color/white_white"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@id/ok_button"
                        android:background="@drawable/bg_security_mode_rnamed_button"
                        android:layout_width="@dimen/dp_188"
                        android:layout_height="@dimen/dp_43.6"
                        android:text="@string/security_mode_renamed_ok"
                        android:fontFamily="mipro-medium" />
</androidx.appcompat.widget.LinearLayoutCompat>