<?xml version='1.0' encoding='utf-8' ?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:textSize="@dimen/sp_18"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:id="@id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10.15"
            android:text="@string/safe_guard_title_text"
            android:fontFamily="mipro-demibold"
            android:layout_marginStart="@dimen/dp_36.36"
            android:layout_marginEnd="@dimen/dp_36.36" />
  <TextView android:textSize="@dimen/sp_17"
            android:textColor="@color/black_80"
            android:id="@id/tv_des"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18.9"
            android:text="@string/pure_mode_des"
            android:lineSpacingExtra="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_36.36"
            android:layout_marginEnd="@dimen/dp_36.36" />
  <CheckBox android:textSize="@dimen/sp_16"
            android:textColor="@color/black_80"
            android:id="@id/cb_do_show_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_19.27"
            android:layout_marginBottom="@dimen/dp_14"
            android:text="@string/thirty_days_no_asking"
            android:paddingStart="@dimen/dp_7"
            android:paddingEnd="@dimen/dp_7"
            android:layout_marginStart="@dimen/dp_36.36" />
</androidx.appcompat.widget.LinearLayoutCompat>