<?xml version='1.0' encoding='utf-8' ?>
<RelativeLayout android:layout_width="fill_parent"
                android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <ImageView android:id="@id/dev_com_res_icon"
             android:background="@drawable/icon_dev_com_result"
             android:layout_width="@dimen/dp_101.82"
             android:layout_height="@dimen/dp_65.45"
             android:layout_marginTop="@dimen/dp_193.09"
             android:layout_centerHorizontal="true" />
  <TextView android:textSize="@dimen/sp_17"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:id="@id/dev_com_result_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_19.27"
            android:text="@string/dev_complaint_result_tip1"
            android:layout_below="@id/dev_com_res_icon"
            android:fontFamily="sans-serif-medium" />
  <TextView android:textSize="@dimen/sp_14"
            android:textColor="@color/black_40"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/dev_complaint_result_tip2"
            android:layout_below="@id/dev_com_result_tip"
            android:fontFamily="sans-serif-medium" />
  <Button android:id="@id/dev_com_button"
          android:layout_width="fill_parent"
          android:layout_height="@dimen/dp_51"
          android:layout_marginBottom="@dimen/dp_37.82"
          android:text="@string/button_text_back"
          android:layout_alignParentBottom="true"
          android:layout_marginStart="@dimen/dp_30"
          android:layout_marginEnd="@dimen/dp_30"
          style="@style/Widget.Button" />
</RelativeLayout>